# SimpleRAG

./: .gitignore  README.md  pyproject.toml  rag_app.py
